@@ -14,6 +14,8 @@
 
 6.6.0 Beta 7
 ============
+* [DanielPharos]: Improved fog/fade of the software renderer to match Glide more closely.
+
 * [DanielPharos]: Also cache texture sizes during brushdef loading for a big speed improvement.
 
 * [DanielPharos]: Vast improvements to the OpenGL lighting quality and performance.
